--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
 name: 'Nuke'
 
 on:
+  schedule:
+    - cron:  '0 9 * * 1'
   push:
     branches: [ "main" ]
 
@@ -13,14 +15,11 @@ jobs:
     name: 'Cleanup'
     runs-on: ubuntu-latest
     environment: production
-
-    # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
         shell: bash
 
     steps:
-    # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v3
 
