--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,11 +43,19 @@ jobs:
         output_file: config.yml
         data_file: data.json
         data_format: json
-          
+
     - name: Install Nuke
       run: |
         AWS_NUKE_VERSION=v2.17.0 sh -c 'wget -c https://github.com/rebuy-de/aws-nuke/releases/download/$AWS_NUKE_VERSION/aws-nuke-$AWS_NUKE_VERSION-linux-amd64.tar.gz -O - | sudo tar -xz && sudo mv aws-nuke-$AWS_NUKE_VERSION-linux-amd64 /usr/local/bin/aws-nuke'
 
+    - name: Configure other AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v4
+      with:
+        aws-region: us-west-2
+        role-to-assume: ${{ secrets.aft_nuke_role }}
+        role-session-name: GithubAction
+        role-chaining: true
+        
     - name: Run Nuke
       run: |
         aws-nuke -c config.yml --force --force-sleep 5
