--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,7 @@ jobs:
         aws-region: us-west-2
         role-to-assume: ${{ secrets.aft_nuke_role }}
         role-session-name: GithubAction
+        role-chaining: true
         aws-access-key-id: ${{ steps.creds.outputs.aws-access-key-id }}
         aws-secret-access-key: ${{ steps.creds.outputs.aws-secret-access-key }}
         aws-session-token: ${{ steps.creds.outputs.aws-session-token }}
