Add quiet to nuke

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         
     - name: Run Nuke AFT
       run: |
-        aws-nuke -c config.yml --force --force-sleep 5
+        aws-nuke -c config.yml --force --force-sleep 5 -q
 
     - name: Configure other AWS Credentials
       uses: aws-actions/configure-aws-credentials@v4
@@ -73,4 +73,4 @@ jobs:
         
     - name: Run Nuke Riot Prod
       run: |
-        aws-nuke -c config.yml --force --force-sleep 5
+        aws-nuke -c config.yml --force --force-sleep 5 -q
