--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,3 +71,13 @@ jobs:
       run: |
         aws-nuke -c config.yml --force --force-sleep 5 -q --no-dry-run
       continue-on-error: true
+
+    - name: pushover-actions
+      uses: umahmood/pushover-actions@main
+      env:
+        PUSHOVER_TOKEN: ${{ secrets.PUSHOVER_TOKEN }}
+        PUSHOVER_USER: ${{ secrets.PUSHOVER_USER_TOKEN }}
+      with:
+        status: ${{ job.status }}
+        title: 'Repo. Activity Notification'
+        message: 'Hello World!'
